# tin

./: .cliff.toml  .dockerignore  .dprint.jsonc  .example.env  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  clippy.toml  compose.local.yml  compose.yml  docker-compose.local.yml  justfile  readme.md  rustfmt.toml  schema.graphql  sqlx-data.json
.cargo-husky/hooks/: pre-commit  pre-push
.config/: cliff.toml  dprint.json
.github/workflows/: ci.yml  release.yaml  release.yml
configs/: cliff.toml  dprint.json  nextest.toml  typos.toml
db/migrations/: 20220124111752_create_user_table.sql  20230720201940_add_email_to_user.sql
docs/dev/: README.md  releasing.md
migrations/: 20220124111752_create_user_table.sql
scripts/: compress-assets.sh  prepare-assets.sh  release.sh
src/: config.rs  context.rs  lib.rs  logger.rs  main.rs  relay.rs  route.rs  routes.rs  scalar.rs  schema.rs
src/db/: mod.rs  schema.rs
src/domain/health/: resolver.rs
src/domain/health/model/: mod.rs
src/domain/health/service/: mod.rs
src/domain/meta/: entities.rs  resolver.rs
src/domain/meta/model/: mod.rs
src/domain/meta/service/: get_meta.rs  mod.rs
src/domain/user/: entities.rs  mod.rs  resolver.rs
src/domain/user/model/: input.rs  mod.rs
src/domain/user/repository/: create_user.rs  delete_user.rs  find_all_users.rs  find_user_by_id.rs  find_user_by_name.rs  update_user.rs
src/domain/user/service/: create_user.rs  find_users.rs  mod.rs  update_user.rs
src/driver/mailer/: mod.rs
src/errors/: app.rs  core.rs  mod.rs
src/health/: entities.rs  mod.rs  resolver.rs  service.rs
src/health/model/: mod.rs
src/health/service/: find_health.rs  get_health.rs  mod.rs
src/meta/: entities.rs  resolver.rs  service.rs
src/meta/model/: mod.rs
src/meta/service/: find_meta.rs  get_meta.rs  mod.rs
src/relay/: mod.rs  validation.rs
src/user/: entities.rs  mod.rs  model.rs  resolver.rs  scalar.rs  schema.rs  service.rs
src/user/model/: input.rs  mod.rs
src/user/repository/: create_user.rs  delete_user.rs  find_all_users.rs  find_user_by_id.rs  find_user_by_name.rs  update_user.rs
src/user/service/: check_username_exists.rs  create_user.rs  delete_user.rs  find_user.rs  find_users.rs  mod.rs  update_user.rs
tests/: compose.yml  docker-compose.yml  schema.graphql  tests.rs
tests/api-collection/: asserts.sh  test.sh
tests/api-collection/meta/: health.hurl  meta.hurl
tests/api-collection/props/: local  prod  staging
tests/api-collection/user/: create_user.hurl  create_user_without_email.hurl  delete_user.hurl  update_user.hurl  user.hurl  users.hurl  users_both_first_and_last.hurl  users_first_3.hurl  users_first_3_after_n.hurl  users_invalid_cursor.hurl  users_last_1_before_n.hurl  users_last_3.hurl  users_no_first_or_last.hurl
tests/health/: graphql.rs  main.rs  tests.rs
tests/meta/: graphql.rs  tests.rs
tests/user/: create_user.rs  create_user_without_full_name.rs  delete_user.rs  duplicate_username.rs  find_user.rs  find_users.rs  graphql.rs  keep_existing_full_name.rs  main.rs  mod.rs  relay.rs  schema.rs  tests.rs  update_user.rs
