[package]
# طين is an arabic word for Clay
name = "tin"
version = "1.2.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["web-programming"]
edition = "2024"
exclude = ["/README.md"]
keywords = ["boilerplate"]
license = "MIT"
publish = false
repository = "https://github.com/azzamsa/tin"
rust-version = "1.88.0"
description = "Rust GraphQL Template"

[profile.release]
strip = true
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
axum = "0.8.4"
hyper = "1.6.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

# GraphQL
async-graphql = { version = "7.0.17", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0.17"

# Rest
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }

# Configurations
dotenvy = "0.15.7"

# Misc
base64 = "0.22.1"
chrono = "0.4.41"
frunk = "0.4.4"
frunk_core = { version = "0.4.4" }
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.12"
time = "0.3.41"
ulid = { version = "1.2.1", features = ["uuid"] }
url = "2.5.4"
uuid = "1.17.0"

[dev-dependencies]
anyhow = "1.0.98"
cynic = "3.11.0"
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5.2", features = ["util"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
